fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -163,7 +163,7 @@ STATS
 	content: " ";
 	display: inline-block;
 	background:blue;
-	width: 395px;
+	width: 370px;
 	height: 0;
 	margin-left: 20px;
 	border-bottom: 2px solid #E6E6E6;
